[Search suggestion] Style for search suggestion snippet tuned

--- a/public/styles/_search_suggestions.scss
+++ b/public/styles/_search_suggestions.scss
@@ -63,10 +63,13 @@
 			}
 			&__type {
 				grid-column: 3/4;
-				grid-row: 2/3;
-				padding: 0.25rem 0.5rem 0 0.25rem;
+				//grid-row: 2/3;
+				grid-row: 1/2;
+				//padding: 0.25rem 0.5rem 0 0.25rem;
+				padding: 0 0.5rem 0.25rem 0.25rem;
 				justify-self: end;
-				align-self: end;
+				//align-self: end;
+				align-self: start;
 				font-size: $font-size-sm;
 				color: $gray-600;
 			}
