--- a/public/styles/_search_suggestions.scss
+++ b/public/styles/_search_suggestions.scss
@@ -45,6 +45,7 @@
 				grid-row: 1/3;
 			}
 			&__description {
+				line-height: 1.2;
 				grid-column: 2/3;
 				grid-row: 1/3;
 				padding: 0.25rem 0.5rem;
