--- a/public/styles/_cards.scss
+++ b/public/styles/_cards.scss
@@ -102,6 +102,8 @@ $card-border-style: 1px dashed $border-color;
 		align-items: center;
 		flex-wrap: wrap;
 		padding-top: 0;
+		line-height: 1.1;
+		color: $body-color;
 		.btn {
 			margin-top: 0.5rem;
 		}
@@ -116,7 +118,7 @@ $card-border-style: 1px dashed $border-color;
 		&__icon {
 			position: relative;
 			top: -0.2em;
-			color: $primary;
+			color: $brand;
 			align-self: flex-end;
 		}
 	}
