--- a/public/styles/_prices.scss
+++ b/public/styles/_prices.scss
@@ -26,11 +26,15 @@
 			}
 		}
 	}
+	
+	ul {
+		margin-bottom: 0;
+		li {
+			margin-bottom: 0.15rem;
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+	}
 }
 
-
-.card-footer-icon {
-	display: none;
-	color: $primary;
-	align-self: flex-end;
-}
