--- a/public/mjml/partials/header.mjml
+++ b/public/mjml/partials/header.mjml
@@ -1,6 +1,6 @@
 		<mj-section mj-class="header">
 			<mj-column>
-				<mj-image src="images/mail-logo.png" width="100px" alt="app name"></mj-image>
+				<mj-image src="../images/email-logo.png" height="40px" width="103px" alt="app name" href="#"></mj-image>
 			</mj-column>
 		</mj-section>
 		<mj-section padding-top="0" padding-bottom="0">
