--- a/public/mjml/partials/styles.mjml
+++ b/public/mjml/partials/styles.mjml
@@ -1,4 +1,6 @@
+		// Custom fonts
 		<mj-font href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" name="Inter"></mj-font>
+		// CSS styles for HTML (mostly used inside mjml-text tags)
 		<mj-style inline="inline">
 			a {
 				color: #fc5130;
@@ -34,23 +36,36 @@
 			}
 		</mj-style>
 		<mj-attributes>
-			<mj-class name="header" background-color="#30bced" text-align="center" full-width="full-width" padding="0" />
-			<mj-class name="bodytext" line-height="1.5" />
-			<mj-class name="smalltext" color="#444" font-size="14px" line-height="1.5" />
-			<mj-class name="footer" background-color="#ccc" font-size="16px" line-height="1.25" padding-top="16px" />
-			<mj-class name="footertext" color="#444" font-size="14px" line-height="1.25" />
-			<mj-class name="footersmalllink" color="#fff" font-size="12px" line-height="1.25" text-transform="none" />
-			<mj-class name="order-item" />
-			<mj-class name="thin" border-color="#999" border-width="1px" padding="0 25px" />
-			<mj-class name="button-cta--big" font-size="20px"/>
-			<mj-class name="button-cta--small" padding="0 0 0 0"/>
-			<mj-class name="order-overview" full-width="full-width" background-color="white" />
-			<mj-class name="product-card" padding-bottom="20px" />
+			// General styles for MJML tags
 			
 			<mj-body background-color="#f6f6f6" />
 			<mj-all font-family="Inter,Helvetica,Arial,sans-serif" font-size="16px" line-height="1.25"  color="#444" />
 			<mj-spacer height="40px" />
 			<mj-divider border-color="lightgreen" border-width="2px" />
-			<mj-section padding-top="0" padding-bottom="0" />
+			<mj-wrapper border="1px dotted fuchsia" />
+			<mj-section padding-top="0" padding-bottom="0" border="1px dotted aqua" />
 			<mj-button background-color="#fc5130" color="white"  font-weight="bold" />
+			<mj-spacer container-background-color="beige" />
+			
+			// MJML classes for MJML tags with mj-class attributes
+			
+			// header
+			<mj-class name="header" background-color="#30bced" text-align="center" full-width="full-width" padding="0" />
+			// main content
+			<mj-class name="bodytext" line-height="1.5" />
+			<mj-class name="smalltext" color="#444" font-size="14px" line-height="1.5" />
+			// footer
+			<mj-class name="footer" full-width="full-width" background-color="#ccc" font-size="16px" line-height="1.25" padding-top="16px" />
+			<mj-class name="footer-bottom" full-width="full-width" background-color="gray" font-size="16px" line-height="1.25" />
+			<mj-class name="footertext" color="#444" font-size="14px" line-height="1.25" />
+			<mj-class name="footersmalllink" color="#fff" font-size="12px" line-height="1.25" text-transform="none" />
+			// divider
+			<mj-class name="thin" border-color="#999" border-width="1px" padding="0 25px" />
+			// buttons
+			<mj-class name="button-cta--big" font-size="20px"/>
+			<mj-class name="button-cta--small" padding="0 0 0 0"/>
+			// order detail
+			<mj-class name="order-overview" full-width="full-width" background-color="white" />
+			<mj-class name="order-item" />
+			<mj-class name="product-card" padding-bottom="20px" />
 		</mj-attributes>
