Silenced unuseful Bootstrap deprecation messages during scss compilation

--- a/public/styles/application.scss
+++ b/public/styles/application.scss
@@ -1,3 +1,5 @@
+$enable-deprecation-messages: false;
+
 // To allow to redefine variables in application-variables,
 // first we need to load functions and variables from bootstrap package.
 
