--- a/public/styles/_search_suggestions.scss
+++ b/public/styles/_search_suggestions.scss
@@ -17,6 +17,7 @@
 		list-style: none;
 		margin: 0;
 		.suggestion {
+			padding: 4px;
 			display: grid;
 			grid-template-columns: 80px 1fr auto;
 			min-height: 60px;
@@ -48,7 +49,7 @@
 				line-height: 1.2;
 				grid-column: 2/3;
 				grid-row: 1/3;
-				padding: 0.25rem 0.5rem;
+				padding: 0 0.5rem;
 				align-self: start;
 				.suggestion__title {
 					margin: 0 0 0 0;
@@ -65,18 +66,19 @@
 			&__type {
 				grid-column: 3/4;
 				grid-row: 1/3;
-				padding: 0.2rem 0.5rem 0.2rem 0.25rem;
+				padding: 0 0.5rem 0 0.25rem;
 				justify-self: end;
 				//align-self: end;
 				align-self: start;
-				font-size: $font-size-sm !important;
+				font-size: 0.8rem;
 				color: $gray-600;
 			}
 			&__price {
 				grid-column: 3/4;
 				grid-row: 1/3;
 				justify-self: end;
-				padding: 0.2rem 0.5rem 0.2rem 0.25rem;
+				//padding: 0.2rem 0.5rem 0.2rem 0.25rem;
+				padding: 0 0.5rem 0 0.25rem;
 				align-self: start;
 				line-height: 1.2;
 				text-align: right;
@@ -90,7 +92,7 @@
 					}
 				}
 				small {
-					font-size: $font-size-sm !important;
+					font-size: 0.8rem;//$font-size-sm !important;
 				}
 			}
 		}
