--- a/public/mjml/partials/order-item.mjml
+++ b/public/mjml/partials/order-item.mjml
@@ -1,27 +1,58 @@
-<mj-section mj-class="order-item">
-	<mj-column width="15%" padding-top="0" padding-right="0">
-		<mj-image src="https://placekitten.com/60/60" alt="Item image" width="60px" align="left" padding-right="0" padding-bottom="0" href="#"></mj-image>
-	</mj-column>
-	<mj-column width="60%" padding-top="0" padding-bottom="0">
-		<mj-text>
-			<p class="compact">
-				<a href="#" class="bodycolor"><strong>Product name, quite very long name</strong><br></a>
-			</p>
-			<p class="small compact">
-				Kód: 325574<br>
-				Jednotk. cena: 4&nbsp;525&nbsp;Kč<br>
-				Množství: 1ks
-			</p>
-		</mj-text>
-	</mj-column>
-	<mj-column width="25%" padding-top="0" padding-bottom="0" padding-left="0">
-		<mj-text>
-			<p class="item-price small compact nomargin">
-				<span class="currency-main">4&nbsp;525&nbsp;Kč</span>
-			</p>
-		</mj-text>
-	</mj-column>
-	<mj-column width="100%" padding="0">
-		<mj-divider mj-class="thin"></mj-divider>
-	</mj-column>
-</mj-section>
+<mj-raw>{if $product->getCode()=="price_rounding"}</mj-raw>
+
+	<mj-section mj-class="order-item">
+		<mj-column width="15%" padding-top="0" padding-right="0">
+		</mj-column>
+		<mj-column width="60%" padding-top="0" padding-bottom="0">
+			<mj-text>
+				<p class="compact">
+					<span class="bodycolor"><strong>{!$product->getName()}</strong><br></span>
+				</p>
+			</mj-text>
+		</mj-column>
+		<mj-column width="25%" padding-top="0" padding-bottom="0" padding-left="0">
+			<mj-text>
+				<p class="item-price small compact nomargin">
+					<span class="currency-main">{!$item->getPriceInclVat()|display_price:"$currency"}</span>
+				</p>
+			</mj-text>
+		</mj-column>
+		<mj-column width="100%" padding="0">
+			<mj-divider mj-class="thin"></mj-divider>
+		</mj-column>
+	</mj-section>
+	
+<mj-raw>{else}
+			{assign var="product_link" value = $product|link_to_product:"with_hostname=$default_domain"}
+			{assign var="product_image" value = $product->getImage()|img_url:"60x60xffffff"}
+</mj-raw>
+	
+	<mj-section mj-class="order-item">
+		<mj-column width="15%" padding-top="0" padding-right="0">
+			<mj-image src="{!$product_image}" alt="" width="60px" align="left" padding-right="0" padding-bottom="0" href="{!$product_link}"></mj-image>
+		</mj-column>
+		<mj-column width="60%" padding-top="0" padding-bottom="0">
+			<mj-text>
+				<p class="compact">
+					<a href="{!$product_link}" class="bodycolor"><strong>{!$product->getName()}</strong><br></a>
+				</p>
+				<p class="small compact">
+					{t}Kód{/t}: {$product->getCatalogId()}<br>
+					{t}Jedn. cena{/t}: {!$item->getUnitPriceInclVat()|display_price:"$currency"}<br>
+					{t}Množství{/t}: {$item->getAmount()}
+				</p>
+			</mj-text>
+		</mj-column>
+		<mj-column width="25%" padding-top="0" padding-bottom="0" padding-left="0">
+			<mj-text>
+				<p class="item-price small compact nomargin">
+					<span class="currency-main">{!$item->getPriceInclVat()|display_price:"$currency"}</span>
+				</p>
+			</mj-text>
+		</mj-column>
+		<mj-column width="100%" padding="0">
+			<mj-divider mj-class="thin"></mj-divider>
+		</mj-column>
+	</mj-section>
+	
+<mj-raw>{/if}</mj-raw>
