--- a/public/mjml/partials/styles.mjml
+++ b/public/mjml/partials/styles.mjml
@@ -1,12 +1,12 @@
 		// Custom fonts
-		<mj-font href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" name="Inter"></mj-font>
+		<mj-font href="##$font_stack##" name="##$font_name##"></mj-font>
 		// CSS styles for HTML (mostly used inside mjml-text tags)
 		<mj-style inline="inline">
 			a {
-				color: #fc5130;
+				color: ##$link_color##;
 			}
 			.bodycolor {
-				color: #444;
+				color: ##$text_color##;
 				text-decoration:none;
 			}
 			a.bodycolor:hover {
@@ -32,33 +32,39 @@
 				font-weight: bold;
 			}
 			.product-card .currency-main {
-				color: #fc5130;
+				color: ##$primary_color##;
 			}
 		</mj-style>
 		<mj-attributes>
 			// General styles for MJML tags
 			
-			<mj-body background-color="#f6f6f6" />
-			<mj-all font-family="Inter,Helvetica,Arial,sans-serif" font-size="16px" line-height="1.25"  color="#444" />
+			<mj-body background-color="##$bg_color##" />
+			<mj-all font-family="##$font_stack##" font-size="16px" line-height="1.25"  color="##$text_color##" />
 			<mj-spacer height="40px" />
-			<mj-divider border-color="lightgreen" border-width="2px" />
+			<mj-divider border-color="##$brand_color##" border-width="2px" />
+			<mj-section padding-top="0" padding-bottom="0" />
+			<mj-button background-color="##$primary_color##" color="##$button_color##"  font-weight="bold" />
+			
+			
+			// for development
+			<!--
 			<mj-wrapper border="1px dotted fuchsia" />
-			<mj-section padding-top="0" padding-bottom="0" border="1px dotted aqua" />
-			<mj-button background-color="#fc5130" color="white"  font-weight="bold" />
 			<mj-spacer container-background-color="beige" />
+			<mj-section border="1px dotted aqua" />
+			/-->
 			
 			// MJML classes for MJML tags with mj-class attributes
 			
 			// header
-			<mj-class name="header" background-color="#30bced" text-align="center" full-width="full-width" padding="0" />
+			<mj-class name="header" background-color="##$brand_color##" text-align="center" full-width="full-width" padding="0" />
 			// main content
 			<mj-class name="bodytext" line-height="1.5" />
-			<mj-class name="smalltext" color="#444" font-size="14px" line-height="1.5" />
+			<mj-class name="smalltext" color="##$text_color##" font-size="14px" line-height="1.5" />
 			<mj-class name="header__logo" width="103px" height="40px" />
 			// footer
-			<mj-class name="footer" full-width="full-width" background-color="#ccc" font-size="16px" line-height="1.25" padding-top="16px" />
+			<mj-class name="footer" full-width="full-width" background-color="##$footer_bgcolor##" font-size="16px" line-height="1.25" padding-top="16px" />
 			<mj-class name="footer-bottom" full-width="full-width" background-color="gray" font-size="16px" line-height="1.25" />
-			<mj-class name="footertext" color="#444" font-size="14px" line-height="1.25" />
+			<mj-class name="footertext" color="##$footer_color##" font-size="14px" line-height="1.25" />
 			<mj-class name="footersmalllink" color="#fff" font-size="12px" line-height="1.25" text-transform="none" />
 			// divider
 			<mj-class name="thin" border-color="#999" border-width="1px" padding="0 25px" />
