--- a/public/styles/_header.scss
+++ b/public/styles/_header.scss
@@ -57,6 +57,28 @@ $navbar_breakpoint_upper: breakpoint-next($navbar_breakpoint_lower);
 	}
 }
 
+// search form on mobile
+@mixin header-search-form-mobile($bgcolor: $brand) {
+	padding: $grid-gutter-width/4;
+	background-color: $bgcolor;
+	border: 1px solid rgba($body-bg, 0.5);
+	border-left: none;
+	border-right: none;
+	flex-wrap: nowrap;
+	input[type="text"] {
+		flex-grow: 10;
+		flex-basis: auto;
+		flex-grow: 10;
+		.btn {
+			flex-grow: 0;
+		}
+		input.form-control, .btn {
+			width: auto;
+			display: inline-block !important;
+		}
+	}
+}
+
 ol.breadcrumb {
 	border-bottom: 1px solid $border-color;
 }
@@ -410,6 +432,11 @@ ol.breadcrumb {
 						}
 					}
 				}
+				.form-inline {
+					@include header-search-form-mobile( $brand );
+					margin-bottom: 0;
+					border-bottom: none;
+				}
 			}
 		}
 		
@@ -654,6 +681,7 @@ ol.breadcrumb {
 			}
 		}
 	}
+	
 
 	// Search and user and language links - hidden on mobile (on mobile items are visible in top nav)
 	&__mainbar {
@@ -745,25 +773,7 @@ ol.breadcrumb {
 				.mainbar__search_cart {
 					display: block;
 					.form-inline {
-						padding: 0;
-						padding: $grid-gutter-width/4;
-						background-color: $brand;
-						border: 1px solid rgba($body-bg, 0.5);
-						border-left: none;
-						border-right: none;
-						flex-wrap: nowrap;
-						input[type="text"] {
-							flex-grow: 10;
-							flex-basis: auto;
-							flex-grow: 10;
-							.btn {
-								flex-grow: 0;
-							}
-							input.form-control, .btn {
-								width: auto;
-								display: inline-block !important;
-							}
-						}
+						@include header-search-form-mobile( $brand );
 					}
 				}
 			}
