--- a/public/styles/_header.scss
+++ b/public/styles/_header.scss
@@ -514,22 +514,11 @@ ol.breadcrumb {
 					}
 				}
 				.dropdown-menu {
-					margin-top: 0;
+					margin-top: 1px;
 					min-width: 100%;
-					background-color: rgba( desaturate( lighten( $brand, 3% ), 5% ),0.98 );
-					@supports(backdrop-filter: blur(5px)){
-						background-color: rgba($brand,0.9);
-						backdrop-filter: blur(5px);
-					}
 					text-transform: none;
 					border: none;
 					top: 97%;
-					a {
-						color: white;
-						&:hover, &:active, &:focus {
-							background-color: rgba($dark, 0.35);
-						}
-					}
 				}
 			}
 		}
