--- a/public/styles/_layout.scss
+++ b/public/styles/_layout.scss
@@ -14,27 +14,41 @@
 // Applies CSS Grid for layout w/sidebar
 
 .has-nav-section {
-	.body {
-		@include media-breakpoint-up(md){
-			display: grid;
-			grid-template-columns: 230px 1fr;
-			grid-template-areas: 'sidebar mainbody';
-			grid-gap: $grid-gutter-width/2;
-			.nav-section {
-				grid-area: sidebar;
-				border-right: 1px solid $gray-300;
-				padding-right: $grid-gutter-width/2;
-			}
-			.content-main {
-				grid-area: mainbody;
-			}
+	border: 1px solid red;
+	@include media-breakpoint-up(md){
+		display: grid;
+		padding-left: 0;
+		grid-template-columns: 230px 1fr;
+		grid-template-areas: 'sidebar breadcrumb' 'sidebar mainbody';
+		//grid-gap: $grid-gutter-width/2;
+		
+		& > *:not(.nav-section) {
+			padding-left: $grid-gutter-width;
 		}
-		@include media-breakpoint-down(sm){
-			.nav-section {
-				border-bottom: 1px solid $gray-300;
-				padding-bottom: $grid-gutter-width/2;
-				margin-bottom: $grid-gutter-width/2;
-			}
+		
+		.nav-section {
+			grid-area: sidebar;
+			border-right: 1px solid $gray-300;
+			//padding-right: $grid-gutter-width/2;
+			border: 1px solid blue;
+		}
+		
+		.nav--breadcrumb {
+			grid-area: breadcrumb;
+		}
+		
+		.content-main {
+			grid-area: mainbody;
+			border: 1px solid pink;
+		}
+	}
+	
+	
+	@include media-breakpoint-down(sm){
+		.nav-section {
+			border-bottom: 1px solid $gray-300;
+			padding-bottom: $grid-gutter-width/2;
+			margin-bottom: $grid-gutter-width/2;
 		}
 	}
 }
