styled sidebar menu prototype

--- a/public/styles/_layout.scss
+++ b/public/styles/_layout.scss
@@ -27,7 +27,7 @@
 		
 		.nav-section {
 			grid-area: sidebar;
-			border-right: 1px solid $gray-300;
+			//border-right: 1px solid $border-color;
 			//padding-right: $grid-gutter-width/2;
 		}
 		
