--- a/public/styles/application.scss
+++ b/public/styles/application.scss
@@ -107,6 +107,8 @@ $enable-deprecation-messages: false;
 
 @import "searchbar";
 
+@import "sidebar_nav";
+
 @import "shared/clearfix";
 @import "shared/loading";
 @import "shared/btn_default";
