--- a/public/styles/_product-detail.scss
+++ b/public/styles/_product-detail.scss
@@ -25,7 +25,7 @@
 			}
 		}
 		
-		&.section--tech_spec {
+		&.section--tech_spec, &.section--creators {
 			.section__body {
 				table.table {
 					margin-top: (0 - $grid-gutter-width /4);
