Sidebar menu styling

--- a/public/styles/_sidebar_nav.scss
+++ b/public/styles/_sidebar_nav.scss
@@ -14,18 +14,11 @@
 		
 		& > a.nav-link {
 			grid-row: 1/2;
-			grid-column: 1/2;
+			grid-column: 1/3;
 			color: inherit;
-			//padding-right: 2rem;
 			position: relative;
 			flex-grow: 2;
 			
-			&:not(.collapsed) {
-				.expander {
-					transform: rotate(180deg);
-					//border-bottom: 1px solid $border-color;
-				}
-			}
 			
 			
 			&.active, {
@@ -43,57 +36,81 @@
 				}
 			}
 		}
-	
-		.expander {
-			grid-row: 1/2;
-			grid-column: 2/3;
-			width: 2rem;
-			height: 100%;
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			line-height: 1;
-			color: $border-color;
-			cursor: pointer;
-			.fas, .far {
-				transform: rotate(0);
-				transition: all 0.25s;
+		
+		&--has-submenu {
+			& > a.nav-link {
+				grid-column: 1/2;	
 			}
-			//border-left: 1px solid $border-color;
-			&:hover {
-				background-color: $hoverColor;
-				color: color-yiq($hoverColor);
-			}
-			&:not(.collapsed) {
+			
+			
+			
+			.expander {
+				grid-row: 1/2;
+				grid-column: 2/3;
+				width: 2rem;
+				height: 100%;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				line-height: 1;
+				color: $border-color;
+				cursor: pointer;
 				.fas, .far {
-					transform: rotate(180deg);
+					transform: rotate(0);
+					transition: all 0.25s;
+				}
+
+				&:hover {
+					background-color: $hoverColor;
+					color: color-yiq($hoverColor);
+				}
+				
+				&:not(.collapsed) {
+					.fas, .far {
+						transform: rotate(180deg);
+					}
 				}
 			}
-		}
-		a.nav-link.active ~ .expander {
-			background-color: $activeColor;
-			color: color-yiq($activeColor);
-		}
-		
-		.submenu {
-			grid-row: 2/3;
-			grid-column: 1/3;
+			a.nav-link.active ~ .expander {
+				background-color: $activeColor;
+				color: color-yiq($activeColor);
+			}
+
+			.submenu {
+				grid-row: 2/3;
+				grid-column: 1/3;
+
+			}
+			
 			
 		}
+	
+		
 	}
+	
+	
+	
+	
 	
 	&__submenu {
 		padding-left: $grid-gutter-width*0.75;
+		grid-row: 2/3;
+		grid-column: 1/3;
 		display: block;
+		font-size: 0.9rem;
 		.nav-item {
-			display: block;
-			border-bottom: 1px solid rgba($border-color, 0.5);
-			&:last-child {
-				border-bottom: none;
+			display: grid;
+			grid-template-rows: auto auto;
+			grid-template-columns: 1fr 2em;
+			border-top: 1px solid rgba($border-color, 0.5);
+			&:first-child {
+				//border-top: none;
 			}
 			
 			
-			.nav-link {
+			& > .nav-link {
+				grid-row: 1/2;
+				grid-column: 1/3;
 				color: $body-color;
 				padding: $grid-gutter-width/8 $grid-gutter-width/4;
 				&.active {
@@ -103,6 +120,20 @@
 				&:hover {
 					background-color: $hoverColor;
 					color: color-yiq($hoverColor);
+				}
+			}
+			&--has-submenu {
+				& > .nav-link {
+					grid-column: 1/2;
+				}
+				.expander {
+					grid-row: 1/2;
+					grid-column: 2/3;
+					width: 2em;
+				}
+				.submenu {
+					grid-row: 2/3;
+					grid-column: 1/3;
 				}
 			}
 		}
