--- a/public/styles/_sidebar_nav.scss
+++ b/public/styles/_sidebar_nav.scss
@@ -131,9 +131,10 @@
 					grid-column: 2/3;
 					width: 2em;
 				}
-				.submenu {
+				& > .nav--sidebar__submenu {
 					grid-row: 2/3;
 					grid-column: 1/3;
+					padding-left: $grid-gutter-width*0.5;
 				}
 			}
 		}
