Edited markup for digital product download. Styles for file lists.

--- a/public/styles/application.scss
+++ b/public/styles/application.scss
@@ -63,6 +63,8 @@ $enable-deprecation-messages: false;
 
 @import "lists";
 
+@import "lists_files";
+
 @import "iobjects";
 
 @import "image_gallery";
