--- a/public/styles/shared/_fileicons.scss
+++ b/public/styles/shared/_fileicons.scss
@@ -147,6 +147,14 @@
 	}
 }
 
+// Folder
+.fileicon-folder {
+	&:before {
+		font-weight: 900;
+		content: "\f07b";
+	}
+}
+
 // Icon with text (i.e. file extension) in data-text attribute
 .fileicon[data-icon-text] {
 	position: relative;
