--- a/public/admin/styles/_layout.scss
+++ b/public/admin/styles/_layout.scss
@@ -56,7 +56,7 @@
 	
 	@include media-breakpoint-up(md){
 		display: grid;
-		grid-template-columns: 200px 1fr;
+		grid-template-columns: 200px minmax(0,1fr);
 		grid-template-areas: 'sidebar mainbody';
 		.nav-section {
 			grid-area: sidebar;
