--- a/public/admin/styles/_forms.scss
+++ b/public/admin/styles/_forms.scss
@@ -159,7 +159,8 @@ form {
 	}
 	input, select {
 		&.active-filter {
-			border-color: black;
+			border-color: $primary;
+			border-width: 2px;
 		}
 	}
 }
