--- a/public/styles/_slider.scss
+++ b/public/styles/_slider.scss
@@ -9,6 +9,7 @@
 		display: flex;
 		align-items: center;
 		background-color: $gray-100;
+		position: relative;
 		&__image {
 			//height: 425px;
 			flex-basis: 50%;
