Minor css enhancements

--- a/public/styles/application.scss
+++ b/public/styles/application.scss
@@ -27,7 +27,11 @@ $enable-deprecation-messages: false;
 
 // Other SCSS
 
+@import "development_utils";
+
 @import "layout";
+
+@import "navs";
 
 @import "alerts";
 
