--- a/public/styles/shared/_colors.scss
+++ b/public/styles/shared/_colors.scss
@@ -22,12 +22,12 @@
 
 @each $color, $value in $theme-colors {
 	.text-contrast-#{$color} {
-		color: color-yiq( $value );
+		color: color-yiq( $value, $body-color, white );
 	}
 }
 @each $color, $value in $grays {
 	.text-contrast-gray-#{$color} {
-		color: color-yiq( $value );
+		color: color-yiq( $value, $body-color, white );
 		order: 0;
 	}
 }
@@ -37,8 +37,21 @@
 	display: inline-block;
 	width: 1rem;
 	height: 1rem;
-	border: 1px solid $gray-600;
+	border: 1px solid rgba($body-color,0.5);
 	border-radius: 0.5rem;
 	margin-right: 0.25em;
 	top: 0.2em;
 }
+.color-chip {
+	position: relative;
+	display: inline-block;
+	font-size: $font-size-sm;
+	font-weight: 600;
+	padding: 0.125em 0.75em;
+	line-height: 1.5;
+	border-radius: 2em;
+	border: 1px solid rgba($body-color,0.25);
+	margin-right: 0.25em;
+	top: 0.2em;
+}
+
