Added styles and styleguides for FAQs

--- a/public/styles/application.scss
+++ b/public/styles/application.scss
@@ -115,6 +115,8 @@ $enable-deprecation-messages: false;
 
 @import "sidebar_nav";
 
+@import "faq";
+
 @import "shared/clearfix";
 @import "shared/loading";
 @import "shared/btn_default";
