Experimantal grid layout

--- a/public/styles/application.scss
+++ b/public/styles/application.scss
@@ -117,6 +117,8 @@ $enable-deprecation-messages: false;
 
 @import "faq";
 
+@import "grid_test";
+
 @import "shared/clearfix";
 @import "shared/loading";
 @import "shared/btn_default";
