--- a/public/styles/_grid_test.scss
+++ b/public/styles/_grid_test.scss
@@ -1,3 +1,7 @@
+@mixin grid-fullwidth(){
+	grid-column: 1/4;
+}
+
 .body--fullwidth {
 	max-width: 100%;
 
@@ -13,8 +17,14 @@
 		}
 		
 		& > .section--fullwidth {
-			grid-column: 1/4;
+			@include grid-fullwidth;
 			//outline: 1px dotted black;
+		}
+		
+		.section--narrow {
+			max-width: $max-content-width;
+			margin-left: auto;
+			margin-right: auto;
 		}
 	}
 }
@@ -33,8 +43,11 @@
 		padding-top: $grid-gutter-width*2;
 		padding-bottom: $grid-gutter-width*2;
 		.display-1 {
+			text-align: center;
 			font-weight: 900;
 			color: black;
+			font-size: clamp(2em, 7vw, 100px);
 		}
 	}
 }
+
